--- a/index.html
+++ b/index.html
@@ -86,10 +86,11 @@
 
   </main>
 
+    <!-- footer content -->
  
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Brandon Obeso</a>.
     </div>
 
   
