updated-responsive-layout-at-smaller-sizes

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="notif-text">
           <p><span class="username">Rizky Hasanuddin</span> sent you a private message</p>
           <p class="time">5 days ago</p>
-          <p class="text-box">Hello, thanks for setting up the Chess Club. Ive been a memeber for a few weeks now and I'm already having lots of fun and improving my game. </p>
+          <p class="text-box">Hello, thanks for setting up the Chess Club. I've been a memeber for a few weeks now and I'm already having lots of fun and improving my game. </p>
         </div>
       </a>
 
@@ -96,6 +96,7 @@
   
 
 <!-- JS -->
+
 <script src="./notif.js"></script>
 </body>
 
